# redge-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run_tests.sh
src/base/logger/: CMakeLists.txt  logger.cpp  logger.h
src/components/text_embedding/: CMakeLists.txt  onnx_embedding.cpp  onnx_embedding.h  text_embedding.h  text_embedding_factory.cpp  text_embedding_factory.h
testing/: CMakeLists.txt  main.cpp  test_embedding.cpp  test_onnx_embedding.cpp  test_onnx_embedding.py  text_embedding_onnx_accuracy.cpp  text_embedding_onnx_benchmark.cpp
testing/scripts/: test_onnx_embedding.py
testing/text_embedding/: CMakeLists.txt  test_onnx_accuracy.cpp  test_onnx_benchmark.cpp
testing/text_embedding/scripts/: test_onnx_embedding.py
tools/: README.md  download_and_export_bge.py  export_bge_to_onnx.py  export_e5_to_onnx.py  requirements.txt  verify_bge_onnx.py  verify_onnx.py
